--- a/#src/scss/mainMenu.scss
+++ b/#src/scss/mainMenu.scss
@@ -188,6 +188,7 @@
     @media (max-width: $bp2) {
         top: 0 !important;
         padding-top: calc(var(--header-height) + 10px);
+        padding-bottom: 0;
         bottom: 0;
         max-height: none !important;
         .page-contact span {
@@ -204,6 +205,7 @@
         &__row {
             width: 320px;
             height: 100%;
+            padding-bottom: 10px;
             padding-right: 20px;
             display: block;
             overflow-y: auto;
