--- a/lescraft/css/style.css
+++ b/lescraft/css/style.css
@@ -6824,7 +6824,7 @@ p a:hover {
   border-radius: 8px;
   border: 1px solid var(--border-color-green);
   background: var(--green-color-light);
-  z-index: 1000;
+  z-index: 400;
   visibility: hidden;
   opacity: 0;
   -webkit-transition: all 0.3s linear;
@@ -9367,6 +9367,7 @@ p a:hover {
   .main-menu {
     top: 0 !important;
     padding-top: calc(var(--header-height) + 10px);
+    padding-bottom: 0;
     bottom: 0;
     max-height: none !important;
   }
@@ -9388,6 +9389,7 @@ p a:hover {
   .main-menu__row {
     width: 320px;
     height: 100%;
+    padding-bottom: 10px;
     padding-right: 20px;
     display: block;
     overflow-y: auto;
