--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -56,7 +56,7 @@ body.loaded {
 }
 .main {
 	flex: 1 1 auto;
-	padding-top: var(--main-offset);
+	padding-top: calc(var(--main-offset) + var(--header-height));
 }
 .intro-banner {
 	margin-top: calc((var(--main-offset) + var(--header-height)) * -1);
@@ -1159,7 +1159,7 @@ p a {
 				height: 0;
 			}
 		}
-		@media (max-width: 530px) {
+		@media (max-width: 548px) {
 			table {
 				padding: 0 var(--container-offset);
 				margin: 0 calc(var(--container-offset) / -1) 24px;
@@ -1214,7 +1214,7 @@ p a {
 			opacity: 1;
 		}
 	}
-	@media (max-width: 530px) {
+	@media (max-width: 548px) {
 		margin: 0 calc(var(--container-offset) * -1) 20px;
 		.tabs {
 			a,
