--- a/#src/scss/header copy.scss
+++ b/#src/scss/header copy.scss
@@ -1,25 +1,35 @@
 .header {
-    border: 1px solid var(--green-color-light);
-    box-shadow: 0px 0px 18px 0px #cccccc2e;
-    background: var(--white);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    position: relative;
     z-index: 501;
-    transition: transform 0.3s linear;
     &.scroll {
         .header__body {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
             transition: transform 0.3s linear;
+            border-color: var(--green-color-light);
+            box-shadow: 0px 0px 18px 0px #CCCCCC2E;
+
+        }
+        .header__top,
+        .header__bot {
+            visibility: hidden;
+            opacity: 0;
+        }
+        .header__bot {
+            margin-top: 98px;
+            @media (max-width: $bp1) {
+                margin-top: 79px;
+            }
         }
         &.unshow {
+            .header__body {
+                transform: translateY(-100%);
+            }
             .search-form__results {
                 visibility: hidden;
                 opacity: 0;
-            }
-            .header__bot {
-                max-height: 0;
-                padding-bottom: 0;
             }
         }
     }
@@ -35,20 +45,26 @@
         }
     }
     &__top {
-        padding: 12px 0;
-        display: grid;
-        grid-template-columns: 1fr auto 1fr;
-        align-items: center;
-        gap: 40px;
-        border-bottom: 1px solid var(--border-color);
+        &-inner {
+            padding: 12px 0;
+            display: grid;
+            grid-template-columns: 1fr auto 1fr;
+            align-items: center;
+            gap: 40px;
+            border-bottom: 1px solid var(--border-color);
+        }
     }
     &__body {
         padding: 20px 0;
         background: var(--white);
-        display: grid;
-        grid-template-columns: auto 1fr auto;
-        align-items: center;
-        gap: 40px;
+        border-bottom: 1px solid transparent;
+        transition: border 0.3s linear;
+        .container {
+            display: grid;
+            grid-template-columns: auto 1fr auto;
+            align-items: center;
+            gap: 40px;
+        }
     }
     &__delivery {
         font-size: 16px;
@@ -114,10 +130,12 @@
         }
     }
     &__bot {
-        max-height: 100px;
-        overflow: hidden;
         padding-bottom: 20px;
-        transition:all .3s linear;
+        border-bottom: 1px solid var(--green-color-light);
+        background: var(--white);
+        transition:
+            visibility 0.15s linear,
+            opacity 0.15s linear;
         ul {
             display: flex;
             justify-content: center;
@@ -140,8 +158,10 @@
     }
     @media (max-width: $bp1) {
         &__top {
-            padding: 7px 0;
-            gap: 20px;
+            &-inner {
+                padding: 7px 0;
+                gap: 20px;
+            }
         }
         &__delivery {
             font-size: 14px;
@@ -149,7 +169,9 @@
         }
         &__body {
             padding: 14px 0;
-            gap: 20px;
+            .container {
+                gap: 20px;
+            }
         }
         &__bot {
             ul {
@@ -174,13 +196,28 @@
         }
     }
     @media (max-width: $bp2) {
-        transform: none !important;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        transition: transform 0.3s linear;
         &.scroll {
+            box-shadow: 0px 0px 18px 0px #CCCCCC2E;
             &.unshow {
-                .header__center {
-                    max-height: 0;
-                    padding-bottom: 0;
-                }
+                transform: translateY(-100%);
+            }
+            .header__top {
+                visibility: visible;
+                opacity: 1;
+            }
+            .header__body {
+                position: relative !important;
+                transform: none !important;
+                box-shadow: none!important;
+            }
+            .header__center {
+                visibility: hidden;
+                opacity: 0;
             }
         }
         &.show-menu {
@@ -217,16 +254,20 @@
                 }
             }
         }
-        &__container {
+        &__inner {
             position: relative;
             z-index: 2;
         }
         &__top {
-            padding: 0;
-            grid-template-columns: 1fr;
-            border-bottom: none;
             background: var(--green-color-light);
-            margin: 0 calc((100vw - var(--content-width)) / -2);
+            .container {
+                padding: 0;
+            }
+            &-inner {
+                padding: 0;
+                grid-template-columns: 1fr;
+                border-bottom: none;
+            }
             .page-loc,
             .top-menu {
                 display: none;
@@ -239,16 +280,22 @@
             border-radius: 0;
         }
         &__body {
-            padding: 10px 0 0;
-            grid-template-columns: auto 1fr;
-            gap: 10px 20px;
+            padding: 10px 0;
+            .container {
+                grid-template-columns: auto 1fr;
+                gap: 10px 20px;
+            }
         }
         &__center {
-            max-height: 100px;
-            grid-area: 2/1/3/3;
+            padding-bottom: 9px;
+            border-bottom: 1px solid var(--green-color-light);
+            background: var(--white);
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
             transition: all 0.3s linear;
-            overflow: hidden;
-            padding-bottom: 10px;
+            z-index: -1;
             &-inner {
                 gap: 8px;
                 max-width: var(--container-width);
@@ -302,12 +349,6 @@
                 width: 0;
                 height: 0;
             }
-        }
-    }
-    @media (max-width: 548px) {
-        &__top {
-            padding: 0 var(--container-offset);
-            margin: 0 calc(var(--container-offset) / -1);
         }
     }
 }
