--- a/#src/scss/cart.scss
+++ b/#src/scss/cart.scss
@@ -117,6 +117,7 @@
         }
     }
     &__action {
+        justify-self: end;
         button {
             display: block;
             margin-bottom: 24px;
