--- a/lescraft/css/style.css
+++ b/lescraft/css/style.css
@@ -2467,6 +2467,9 @@ p a:hover {
 .search-form__inner:before {
   content: "";
   display: block;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 24px;
+  flex: 0 0 24px;
   width: 24px;
   height: 24px;
   background: url(../img/svg/loupe.svg) center/contain no-repeat;
@@ -2624,7 +2627,7 @@ p a:hover {
   background: var(--green-color-light);
 }
 
-.header__center-inner,
+.header__center,
 .header__right {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -2633,7 +2636,7 @@ p a:hover {
   align-items: center;
 }
 
-.header__center-inner {
+.header__center {
   gap: 20px;
 }
 
@@ -7734,6 +7737,9 @@ p a:hover {
   }
 
   .search-form__inner::before {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 20px;
+    flex: 0 0 20px;
     width: 20px;
     height: 20px;
     margin-right: 6px;
@@ -9104,6 +9110,9 @@ p a:hover {
   }
 
   .search-form__inner::before {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 16px;
+    flex: 0 0 16px;
     width: 16px;
     height: 16px;
   }
@@ -9211,13 +9220,7 @@ p a:hover {
     transition: all 0.3s linear;
     overflow: hidden;
     padding-bottom: 10px;
-  }
-
-  .header__center-inner {
     gap: 8px;
-    max-width: var(--container-width);
-    padding: 0 var(--container-offset);
-    margin: 0 auto;
   }
 
   .header__right {
