--- a/lescraft/css/style.css
+++ b/lescraft/css/style.css
@@ -5870,6 +5870,7 @@ p a:hover {
 }
 
 .item-cart__action {
+  grid-column: 5/6;
   justify-self: end;
 }
 
@@ -7028,28 +7029,20 @@ p a:hover {
 @-webkit-keyframes fadeUp {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(30px);
-    transform: translateY(30px);
   }
 
   100% {
     opacity: 1;
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
   }
 }
 
 @keyframes fadeUp {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(30px);
-    transform: translateY(30px);
   }
 
   100% {
     opacity: 1;
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
   }
 }
 
@@ -10290,6 +10283,10 @@ p a:hover {
   .item-cart__total {
     grid-area: 2/3/3/4;
     height: auto;
+  }
+
+  .item-cart__action {
+    grid-column: 4/5;
   }
 
   .item-cart__price {
