--- a/#src/scss/catalog.scss
+++ b/#src/scss/catalog.scss
@@ -1005,7 +1005,7 @@
         }
     }
     @media (max-width: $bp3) {
-        padding: 20px 0;
+        padding: 20px 4px;
         box-shadow: none;
         border-radius: 0;
         border: none;
@@ -1033,7 +1033,6 @@
         }
         &__scroll {
             flex: 1 1 auto;
-            margin: 0 4px;
             overflow-y: auto;
         }
         &__form {
@@ -1043,13 +1042,10 @@
             margin: 0 auto;
         }
         &__top,
-        &__body,
+        &__scroll,
         &__bot {
             width: 100%;
-            max-width: var(--container-width);
-            padding: 0 var(--container-offset);
-            margin-left: auto;
-            margin-right: auto;
+            padding: 0 calc((100% - var(--content-width)) / 2);
         }
         &__top {
             position: sticky;
@@ -1063,6 +1059,13 @@
             display: block;
             width: 20px;
             height: 20px;
+        }
+    }
+    @media (max-width: $bp5) {
+        &__top,
+        &__scroll,
+        &__bot {
+            padding: 0 var(--container-offset);
         }
     }
 }
