--- a/#src/scss/mainMenu.scss
+++ b/#src/scss/mainMenu.scss
@@ -13,6 +13,8 @@
     opacity: 0;
     pointer-events: none;
     z-index: 1;
+    transform: translateZ(0);
+    backface-visibility: hidden;
     transition:
         visibility 0.3s linear,
         opacity 0.3s linear;
