--- a/lescraft/css/style.css
+++ b/lescraft/css/style.css
@@ -3036,6 +3036,10 @@ p a:hover {
   opacity: 0;
   pointer-events: none;
   z-index: 1;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-transition: visibility 0.3s linear, opacity 0.3s linear;
   transition: visibility 0.3s linear, opacity 0.3s linear;
 }
