--- a/#src/scss/search.scss
+++ b/#src/scss/search.scss
@@ -78,6 +78,11 @@
         .text-btn {
             margin: 20px 20px 8px;
         }
+        .link-btn {
+            b {
+                display: contents;
+            }
+        }
     }
     &__results-inner {
         .custom-scroll {
